# zodiak_tg

./: Cargo.toml  README.md  go.mod  tg.go
src/: arkan.rs  db_update.rs  forecast.rs  main.rs
